--- a/pages/index.html
+++ b/pages/index.html
@@ -83,7 +83,7 @@
             <p>111 REVIEWS</p>
             <div class="flex items-center gap-10">
               <span class="text-red font-700 text-20">5.0</span>
-              <ul>
+              <ul class="star">
                 <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20" /></li>
                 <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20" /></li>
                 <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20" /></li>
@@ -99,7 +99,7 @@
             <p>18 REVIEWS</p>
             <div class="flex items-center gap-10">
               <span class="text-red font-700 text-20">5.0</span>
-              <ul>
+              <ul class="star">
                 <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20" /></li>
                 <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20" /></li>
                 <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20" /></li>
@@ -120,7 +120,7 @@
             <p>224 REVIEWS</p>
             <div class="flex items-center gap-10">
               <span class="text-red font-700 text-20">5.0</span>
-              <ul>
+              <ul class="star">
                 <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20" /></li>
                 <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20" /></li>
                 <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20" /></li>
@@ -136,7 +136,7 @@
             <p>13 REVIEWS</p>
             <div class="flex items-center gap-10">
               <span class="text-red font-700 text-20">5.0</span>
-              <ul>
+              <ul class="star">
                 <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20" /></li>
                 <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20" /></li>
                 <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20" /></li>
@@ -389,7 +389,7 @@
               </div>
               <div class="flex items-center gap-10">
                 <h4 class="tab-title">5.0</h4>
-                <ul>
+                <ul class="star">
                   <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
                   <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
                   <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
@@ -411,7 +411,7 @@
               </div>
               <div class="flex items-center gap-10">
                 <h4 class="tab-title">4.6</h4>
-                <ul>
+                <ul class="star">
                   <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
                   <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
                   <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
@@ -433,7 +433,7 @@
               </div>
               <div class="flex items-center gap-10">
                 <h4 class="tab-title">5.0</h4>
-                <ul>
+                <ul class="star">
                   <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
                   <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
                   <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
@@ -624,7 +624,7 @@
   <section class="find-gram">
     <div class="title title-blue text-center my-30">
       <h2>Find us on the 'gram</h2>
-      <button type="button" class="btn">follow us</button>
+      <a type="button" class="btn">follow us</a>
     </div>
     <div class="grid grid-cols-2 lg:grid-cols-4 gap-2 p-20 xl:ps-70">
       <img src="../assets/image/find1.png" alt="image" width="363" height="363" class="gram-img" />
@@ -651,7 +651,7 @@
         <div class="logo mb-55">
           <a href="index.html" aria-label="logo"><img src="../assets/image/logo.png" alt="logo" width="212" height="100"/></a>
         </div>
-        <div>
+        <div class="footer-item">
           <div class="content uppercase text-white">
             <p>socila link</p>
           </div>
