--- a/pages/index.html
+++ b/pages/index.html
@@ -626,11 +626,11 @@
       <h2>Find us on the 'gram</h2>
       <a type="button" class="btn">follow us</a>
     </div>
-    <div class="grid grid-cols-2 lg:grid-cols-4 gap-2 p-20 xl:ps-70">
-      <img src="../assets/image/find1.png" alt="image" width="363" height="363" class="gram-img" />
-      <img src="../assets/image/find2.png" alt="image" width="363" height="363" class="gram-img" />
-      <img src="../assets/image/find3.png" alt="image" width="363" height="363" class="gram-img" />
-      <img src="../assets/image/find4.png" alt="image" width="363" height="363" class="gram-img" />
+    <div class="grid grid-cols-2 lg:grid-cols-4 gap-2 xl:gap-40 p-20">
+      <div class="gram-item"><img src="../assets/image/find1.png" alt="image" width="363" height="363" class="gram-img" /></div>
+      <div class="gram-item"><img src="../assets/image/find2.png" alt="image" width="363" height="363" class="gram-img" /></div>
+      <div class="gram-item"><img src="../assets/image/find3.png" alt="image" width="363" height="363" class="gram-img" /></div>
+      <div class="gram-item"><img src="../assets/image/find4.png" alt="image" width="363" height="363" class="gram-img" /></div>  
     </div>
   </section>
   <!-- find gram end -->
